--- a/pxpacker/pxpacker.csproj
+++ b/pxpacker/pxpacker.csproj
@@ -57,5 +57,8 @@
       <Name>PearXLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="script.nsi" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
